--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -19,6 +19,11 @@
 #   ]
 standalone_tags:
   [
+     {id: 0, size: 0.194},
+     {id: 1, size: 0.194},
+     {id: 2, size: 0.194},
+     {id: 3, size: 0.194},
+     {id: 4, size: 0.194}
   ]
 # ## Tag bundle definitions
 # ### Remarks
